--- a/GOTB.WebUI/Views/Home/Index.cshtml
+++ b/GOTB.WebUI/Views/Home/Index.cshtml
@@ -1,5 +1,24 @@
-﻿@{
-    ViewBag.Title = "Index";
+﻿@model GoTB.Domain.Entities.Character[]
+@{
+    ViewBag.Title = "Characters";
 }
 
-<h2>Index</h2>
+<h2>@ViewBag.Title</h2>
+
+@foreach (var character in @Model)
+{
+    <div>
+        <h3>@character.Name</h3><br/>
+        <p>
+            @*            @craracter.ImageName*@
+            <div>
+                Возраст: @character.Age
+                @character.IsMan ? "Мужчина" : "Женщина"
+                @character.IsAlive ? "Еще пока что жив..." : "Умер"
+                Стоимость: @character.Price
+            </div>
+        </p>
+
+    </div>
+}
+    
