--- a/GOTB.WebUI/Views/Shared/_Layout.cshtml
+++ b/GOTB.WebUI/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
 </head>
 <body>
  <div id="header">
- <div class="title">SPORTS STORE</div>
+ <div class="title">Game of Thrones BINGO!</div>
  </div>
  <div id="categories">
  We will put something useful here later
