--- a/GOTB.WebUI/Content/Site.css
+++ b/GOTB.WebUI/Content/Site.css
@@ -139,3 +139,26 @@ DIV.pager
  background-color: #353535;
  color: White;
  }
+
+ h2 {
+     font-size: 50px;
+ }
+
+ h3 {
+     font-size: 40px;
+     margin-bottom: 0px;
+ }
+
+ .character_img {
+     height: 200px;
+     margin: 10px;
+     margin-right: 30px;
+     margin-top: 0px;
+ }
+
+ .character_div {
+     display: flex;
+     flex-direction: row;
+     align-items: center;
+     font-size: 30px;
+ }
