--- a/GOTB.WebUI/Views/Home/Index.cshtml
+++ b/GOTB.WebUI/Views/Home/Index.cshtml
@@ -7,10 +7,10 @@
 
 @foreach (var character in @Model)
 {
-    <div>
-        <h3>@character.Name</h3><br/>
+    <h3>@character.Name</h3>
+    <div class ="character_div">
         <p>
-            <img src="@(GoTB.WebUI.Models.CharacterConstants.PathToImages + @character.ImageName)" alt="@character.Name"/>
+            <img class="character_img" src="@(GoTB.WebUI.Models.CharacterConstants.PathToImages + @character.ImageName)" alt="@character.Name"/>
             <div>
                 Возраст: @character.Age<br/>
                 @(character.IsMan ? "Мужчина" : "Женщина") <br/>
@@ -18,6 +18,7 @@
                 Стоимость: @character.Price
             </div>
         </p>
+        <br/>
 
     </div>
 }
