--- a/GOTB.WebUI/Views/Home/Index.cshtml
+++ b/GOTB.WebUI/Views/Home/Index.cshtml
@@ -19,6 +19,7 @@
                 @(character.IsAlive ? "Еще пока что жив..." : "Умер")<br/>
                 Стоимость: @character.Price
             </div>
+            <button></button>
         </p>
         <br/>
 
