cart and controller

--- a/GOTB.WebUI/Views/Home/Index.cshtml
+++ b/GOTB.WebUI/Views/Home/Index.cshtml
@@ -37,6 +37,11 @@
                 @(character.IsMan ? "Мужчина" : "Женщина") <br/>
                 @(character.IsAlive ? "Еще пока что жив..." : "Умер")<br/>
                 Стоимость: @character.Price
+                @using (Html.BeginForm("Manage", "Cart"))
+                {
+                    @Html.Hidden("id", character.Id)
+                    <input type="submit" value="Проголосовать!" />
+                }
             </div>
         </p>
         <br/>
