--- a/GOTB.WebUI/Views/Home/CharacterInfo.cshtml
+++ b/GOTB.WebUI/Views/Home/CharacterInfo.cshtml
@@ -5,10 +5,10 @@
 <div class="character_div">
     <p>
         <img class="character_img" src="@(GoTB.WebUI.Models.CharacterConstants.PathToImages + @Model.Character.ImageName)" alt="@Model.Character.Name" />
-        <div>
-            Возраст: @Model.Character.Age<br />
-            @(Model.Character.IsMan ? "Мужчина" : "Женщина") <br />
-            @(Model.Character.IsAlive ? "Еще пока что жив..." : "Умер")<br />
+        <div class="param">
+            Возраст: @Model.Character.Age<br/>
+            @(Model.Character.IsMan ? "Мужчина" : "Женщина") <br/>
+            @(Model.Character.IsAlive ? "Еще пока что жив..." : "Умер")<br/>
             Стоимость: @Model.Character.Price
             @switch (Model.VoteType)
             {
@@ -16,20 +16,23 @@
                     using (Html.BeginForm("Manage", "Cart"))
                     {
                         @Html.Hidden("id", Model.Character.Id)
-                        <input type="submit" value="Проголосовать!" />
+                        <input type="submit" value="Проголосовать!"/>
                     }
                     break;
                 case VoteType.AlreadyVoted:
                     using (Html.BeginForm("Remove", "Cart"))
                     {
                         @Html.Hidden("id", Model.Character.Id)
-                        <input type="submit" value="Разголосовать!" />
+                        <input type="submit" value="Разголосовать!"/>
                     }
                     break;
                 default:
                     <div>Вы не можете проголосовать сейчас</div>
                     break;
             }
+        </div>
+        <div class="descr">
+            @Model.Character.Description
         </div>
     </p>
     <br />
