--- a/GOTB.WebUI/Content/Site.css
+++ b/GOTB.WebUI/Content/Site.css
@@ -167,3 +167,12 @@ DIV.pager
      font-size: 30px;
      text-align: center;
  }
+
+ .descr {
+     font-size: 20px;
+ }
+
+ .param {
+     min-width: 220px;
+     margin-right: 30px;
+ }
