--- a/GOTB.WebUI/Views/Home/CharacterInfo.cshtml
+++ b/GOTB.WebUI/Views/Home/CharacterInfo.cshtml
@@ -1,4 +1,5 @@
 ﻿@using GoTB.Domain.Entities
+@using GoTB.WebUI.Models
 @model GoTB.WebUI.Models.CharacterViewModel
 
 <h3>@Model.Character.Name</h3>
@@ -10,26 +11,41 @@
             @(Model.Character.IsMan ? "Мужчина" : "Женщина") <br/>
             @(Model.Character.IsAlive ? "Еще пока что жив..." : "Умер")<br/>
             Стоимость: @Model.Character.Price
+            @{ var bvm = new ButtonViewModel()
+               {
+                   Controller = "Cart",
+                   TextIfNotNeeded = "Вы уже проголосовали на этой неделе",
+                   HiddenParams = new Dictionary<string, string>() {{"id", Model.Character.Id.ToString()}}
+               }; }
             @switch (Model.VoteType)
             {
                 case VoteType.CanVote:
-                    using (Html.BeginForm("Manage", "Cart"))
-                    {
-                        @Html.Hidden("id", Model.Character.Id)
-                        <input type="submit" value="Проголосовать!"/>
-                    }
+                    bvm.Method = "Manage";
+                    bvm.NeedToShowButton = true;
+                    bvm.TextButton = "Проголосовать!";
+//                    using (Html.BeginForm("Manage", "Cart"))
+//                    {
+//                        @Html.Hidden("id", Model.Character.Id)
+//                        <input type="submit" value="Проголосовать!"/>
+//                    }
                     break;
                 case VoteType.AlreadyVoted:
-                    using (Html.BeginForm("Remove", "Cart"))
-                    {
-                        @Html.Hidden("id", Model.Character.Id)
-                        <input type="submit" value="Разголосовать!"/>
-                    }
+                    bvm.Method = "Remove";
+                    bvm.NeedToShowButton = true;
+                    bvm.TextButton = "Разголосовать!";
+@*                    using (Html.BeginForm("Remove", "Cart"))*@
+@*                    {*@
+@*                        @Html.Hidden("id", Model.Character.Id)*@
+@*                        <input type="submit" value="Разголосовать!"/>*@
+@*                    }*@
                     break;
                 default:
-                    <div>Вы не можете проголосовать сейчас</div>
+                    bvm.NeedToShowButton = false;
+                    bvm.TextIfNotNeeded = "Вы не можете проголосовать сейчас";
+@*                    <div>Вы не можете проголосовать сейчас</div>*@
                     break;
             }
+            @{ Html.RenderAction("SubmitButton", "Cart", bvm); }
         </div>
         <div class="descr">
             @Model.Character.Description
