--- a/GOTB.WebUI/Views/Shared/_Layout.cshtml
+++ b/GOTB.WebUI/Views/Shared/_Layout.cshtml
@@ -25,7 +25,8 @@
             Controller = "Cart",
             Method = "Submit",
             TextButton = "Подтвердить выбор",
-            TextIfNotNeeded = "Вы уже сделали окончательный выбор на этой неделе"
+            TextIfNotNeeded = "Вы уже сделали окончательный выбор на этой неделе",
+            NeedToShowButton = true
         } }); }
  </div>
  <div id="content">
