--- a/GOTB.WebUI/Views/Cart/SubmitButton.cshtml
+++ b/GOTB.WebUI/Views/Cart/SubmitButton.cshtml
@@ -1,13 +1,4 @@
-﻿@model GoTB.WebUI.Models.ButtonViewModel
+﻿@using GoTB.WebUI.HtmlHelpers
+@model GoTB.WebUI.Models.ButtonViewModel
 
-@if (Model.NeedToShowButton)
-{
-    using (@Html.BeginForm(Model.Method, Model.Controller, FormMethod.Post))
-    {
-        <input type="submit" value="@Model.TextButton"/>
-    }
-}
-else
-{
-    <div>@Model.TextIfNotNeeded</div>
-}
+@Html.CreateButtonIfNeeded(Model)
