--- a/GOTB.WebUI/Views/Account/AdminPanel.cshtml
+++ b/GOTB.WebUI/Views/Account/AdminPanel.cshtml
@@ -3,4 +3,6 @@
 @if (@Model)
 {
     @Html.ActionLink("Admin Panel", "Index", "CharacterEdit")<br/>
+    <br/>
+    @Html.ActionLink("Картинка", "UploadImage", "CharacterEdit")<br />
 }
