--- a/GOTB.WebUI/Views/CharacterEdit/Details.cshtml
+++ b/GOTB.WebUI/Views/CharacterEdit/Details.cshtml
@@ -31,10 +31,10 @@
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.IsMan)
+         @Html.DisplayNameFor(model => model.Gender)
     </div>
     <div class="display-field">
-        @Html.DisplayFor(model => model.IsMan)
+        @Html.DisplayFor(model => model.Gender)
     </div>
 
     <div class="display-label">
@@ -45,10 +45,10 @@
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.IsAlive)
+         @Html.DisplayNameFor(model => model.Alive)
     </div>
     <div class="display-field">
-        @Html.DisplayFor(model => model.IsAlive)
+        @Html.DisplayFor(model => model.Alive)
     </div>
 
     <div class="display-label">
