--- a/GOTB.WebUI/Views/CharacterEdit/Index.cshtml
+++ b/GOTB.WebUI/Views/CharacterEdit/Index.cshtml
@@ -21,13 +21,13 @@
             @Html.DisplayNameFor(model => model.Price)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.IsMan)
+            @Html.DisplayNameFor(model => model.Gender)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Age)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.IsAlive)
+            @Html.DisplayNameFor(model => model.Alive)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.PopularityPoints)
@@ -50,7 +50,7 @@
             @Html.DisplayFor(modelItem => item.Price)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.IsMan)
+            @Html.DisplayFor(modelItem => item.Gender)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Age)
