--- a/GOTB.WebUI/Views/CharacterEdit/Edit.cshtml
+++ b/GOTB.WebUI/Views/CharacterEdit/Edit.cshtml
@@ -39,11 +39,11 @@
         </div>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.IsMan)
+            @Html.LabelFor(model => model.Gender)
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.IsMan)
-            @Html.ValidationMessageFor(model => model.IsMan)
+            @Html.EditorFor(model => model.Gender)
+            @Html.ValidationMessageFor(model => model.Gender)
         </div>
 
         <div class="editor-label">
@@ -55,11 +55,11 @@
         </div>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.IsAlive)
+            @Html.LabelFor(model => model.Alive)
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.IsAlive)
-            @Html.ValidationMessageFor(model => model.IsAlive)
+            @Html.EditorFor(model => model.Alive)
+            @Html.ValidationMessageFor(model => model.Alive)
         </div>
 
         <div class="editor-label">
