enums and votefix

--- a/GOTB.WebUI/Views/CharacterEdit/Create.cshtml
+++ b/GOTB.WebUI/Views/CharacterEdit/Create.cshtml
@@ -53,11 +53,11 @@
         </div>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.Alive)
+            @Html.LabelFor(model => model.IsAlive)
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.Alive)
-            @Html.ValidationMessageFor(model => model.Alive)
+            @Html.EditorFor(model => model.IsAlive)
+            @Html.ValidationMessageFor(model => model.IsAlive)
         </div>
 
         <div class="editor-label">
