--- a/GOTB.WebUI/Views/CharacterEdit/Details.cshtml
+++ b/GOTB.WebUI/Views/CharacterEdit/Details.cshtml
@@ -45,10 +45,10 @@
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.Alive)
+         @Html.DisplayNameFor(model => model.IsAlive)
     </div>
     <div class="display-field">
-        @Html.DisplayFor(model => model.Alive)
+        @Html.DisplayFor(model => model.IsAlive)
     </div>
 
     <div class="display-label">
