--- a/GOTB.WebUI/Views/Shared/_Layout.cshtml
+++ b/GOTB.WebUI/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
     <br/>
     @Html.ActionLink("Посмотреть выбранных", "Manage", "Cart") <br/>
     <br/>
-    @{ Html.RenderAction("UserNameView", "Account"); }
+    @{ Html.RenderAction("QuickLogin", "Account"); }
     <br/>
     @{ Html.RenderAction("AdminPanel", "Account"); }
     <br/>
