--- a/GOTB.WebUI/Views/Home/CharacterInfo.cshtml
+++ b/GOTB.WebUI/Views/Home/CharacterInfo.cshtml
@@ -44,4 +44,4 @@
 
 </div>
 
-@{ Html.RenderAction("WriteComment", "Home", new {character = @Model.Character}); }
+@{ Html.RenderAction("WriteComment", "Home", new {chr = @Model.Character}); }
